src/main/resources/tests/Semantics/good/characterValExpression.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : character;
begin
    X := character'val(60);
end ExampleProcedure;
