src/main/resources/tests/Semantics/bad/assignmentType6.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : boolean := 'a';
begin
    put('E');
end ExampleProcedure;
